--- a/interview/css/interview1.css
+++ b/interview/css/interview1.css
@@ -8,12 +8,13 @@
     }
 
     #container {
-    	max-width: 650px;
-    	margin: 0 auto;
+      max-width: 650px;
+      margin: 0 auto;
     }
-    
+
     img {
-    	max-width: 100%
+      display: block; 
+      max-width: 100%;
     }
 
     body {
