--- a/interview/css/interview2.css
+++ b/interview/css/interview2.css
@@ -1,4 +1,79 @@
 
     body {
-      background: pink;
+      background: white;
+      font-family: "adobe-caslon-pro",serif;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.5em;
+      letter-spacing: normal;
+      color: #333;
+      margin: 0;
     }
+
+    #container {
+    	max-width: 650px;
+    	margin: 0 auto;
+    }
+
+    h2 {
+      font-family: Nobel,sans-serif;
+      font-size: .8rem;
+      line-height: 1em;
+      letter-spacing: .025em;
+      display: inline-block;
+      margin-top: 3rem;
+      padding: 0;
+      color: #c00000;
+    }
+
+    h1 {
+      font-family: "ITC Caslon",Georgia,serif;
+      font-size: 35px;
+      font-weight: bold;
+      line-height: 36px;
+      letter-spacing: -.01em;
+      color: #111;
+      margin-bottom: 25px;
+      margin-top: 18px;
+    }
+
+    h3 {
+      font-family: "adobe-caslon-pro",serif;
+      font-size: 14px;
+      font-weight: normal;
+      line-height: 20px;
+      letter-spacing: normal;
+      color: #666;
+      word-break: break-word;
+    }
+
+    img {
+      margin-top: 50px;
+      margin-left: 50px;
+      margin-right: 50px;
+      margin-bottom: 20px;
+      max-width: 80%; max-height: 80%;
+      width: auto; height: auto;
+    }
+
+    h4 {
+      font-size: 1rem;
+      font-weight: 0;
+      color: #111;
+      margin: 0px 0 5px;
+      font-family: "ITC Caslon",Georgia,serif;
+      line-height: 1.5em;
+      letter-spacing: normal;
+    }
+
+    b {
+      color: #c00000;
+      text-decoration: none;
+    }
+
+    p {
+      margin-block-start: 0;
+      margin-block-end: 0;
+    }
+
+    
