--- a/css/main.css
+++ b/css/main.css
@@ -18,3 +18,11 @@
       border-left: 5px solid red;
       list-style-position: inside;
     }
+
+    a, a:visited {
+      color: blue;
+    }
+
+    a:hover {
+      color: red;
+    }
