--- a/interview/css/interview2.css
+++ b/interview/css/interview2.css
@@ -76,4 +76,20 @@
       margin-block-end: 0;
     }
 
+    a {
+      text-decoration-line: none;
+      color: black;
+      font-size: 13px;
+    }
+
+    a:hover {
+      color: gray;
+    }
+
+    ul {
+      padding: 0;
+      list-style-type: none; 
+      margin-block-start: 0;
+    }
+
     
