--- a/flags/css/custom.css
+++ b/flags/css/custom.css
@@ -13,7 +13,6 @@ body { background: black; }
     background: white;
 }
 
-
 /* make all divs inside of #canvas a rectangle */
 #canvas div{
   position: absolute;
@@ -26,11 +25,26 @@ body { background: black; }
     background: red;
 }
 
+/*@keyframes move {
+    from { left: 0; }
+    to   { left: 500px; }
+}      
+
+@keyframes fadeout {
+    from { opacity: 1; }
+    to   { opacity: 0; }
+}
+
+@keyframes changecolor {
+    from { background-color: red; }
+    to   { background-color: white; }
+}*/
+
 #rectangle-2 {
     width: 500px;
     height: 150px;
     background: navy;
-    bottom: 0px;
+    bottom: 0
 }
 
 #circle {
@@ -47,6 +61,11 @@ body { background: black; }
     height: 10px;
     background: black;
     top: 20px;
+    animation-name: fadeout;
+    animation-delay: 2s;
+    animation-duration: 3s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
 }
 
 #stroke-2 {
@@ -54,6 +73,11 @@ body { background: black; }
     height: 10px;
     background: black;
     bottom: 20px;
+    animation-name: fadeout;
+    animation-delay: 2s;
+    animation-duration: 3s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
 }
 
 #stroke-3 {
@@ -61,11 +85,57 @@ body { background: black; }
     height: 300px;
     background: black;
     left: 20px;
+    animation-name: fadeout;
+    animation-delay: 2s;
+    animation-duration: 3s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
 }
 
 #stroke-4 {
     width: 10px;
     height: 300px;
     background: black;
-    right: 20px;
+    right: 20px;animation-name: fadeout;
+    animation-delay: 2s;
+    animation-duration: 3s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
+
+@keyframes fadeout {
+    from { opacity: 1; }
+    to   { opacity: 0; }
+}
+
+@keyframes small {
+    from {
+    width: 500px;
+    height: 150px;}
+    to {
+    width: 0px;
+    height: 0px;}
+}
+    div#rectangle-1 {
+    background-color: red;
+    animation-name: small;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-delay: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-fill-mode: none;
+    animation-play-state: running;
+}
+
+    div#rectangle-2 {
+    background-color: navy;
+    animation-name: small;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-delay: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-fill-mode: none;
+    animation-play-state: running;
 }
