--- a/interview/css/interview2.css
+++ b/interview/css/interview2.css
@@ -15,6 +15,11 @@
     	margin: 0 auto;
     }
 
+    #red-line {
+      border-color: #c00000;
+      margin-top: 15px;
+    }
+
     h2 {
       font-family: Nobel,sans-serif;
       font-size: .8rem;
